# wallet_api

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_17_1449-f5160640163c_create_wallets_table.py
app/: main.py
app/core/: config.py
app/crud/: __init__.py  wallet.py
app/database/: __init__.py  db_constructor.py  make_test_data.py
app/database/models/: __init__.py  base.py  wallet.py
app/schemas/: __init__.py  wallet.py
app/views/: __init__.py  wallet.py
