[project]
name = "wallet-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Igor Bondarenko",email = "bondarenko200021@mail.ru"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.1,<3.0.0)",
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
